--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
     "rxfire": "^6.0.3",
